--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.8",
+    "@mui/x-data-grid": "^5.2.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
